--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1 {
 	padding: 0;
 	font-size: 32px;
 	font-weight: bold;
-	text-shadow: 0 1px 1px;
+	text-shadow: 0 1px 2px #000000;
 }
 h2 {
 	margin: 0;
