--- a/style.css
+++ b/style.css
@@ -21,19 +21,21 @@ h1 {
 	padding: 0;
 	font-size: 32px;
 	font-weight: bold;
-	text-shadow: 0 1px 2px #000000;
+	text-shadow: 0 1px 4px #000000;
 }
 h2 {
 	margin: 0;
 	padding: 0;
 	font-size: 24px;
 	font-weight: bold;
+	text-shadow: 0 1px 1px #000000;
 }
 h3 {
 	margin: 0;
 	padding: 0;
 	font-size: 16px;
 	font-weight: bold;
+	text-shadow: 0 1px 1px #000000;
 }
 h4 {
 	margin: 0;
@@ -52,14 +54,19 @@ p {
 	padding: 0;
 	text-align: justify;
 }
-div#download a {
-	color: #000000;
-	text-decoration: none;
-}
 div#download {
 	float: right;
 	text-align: center;
 	margin-left: 20px;
+}
+div#download p {
+	text-align: center;
+}
+div#download a {
+	color: #1A55AD;
+	text-shadow: 0 0 3px #74ACFF;
+	text-decoration: none;
+	font-weight: bold;
 }
 div#sharing {
 	clear: both;
