--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	margin: 0;
-	padding: 20px;
+	padding: 0 30px 60px 30px;
 	font-family: Times, serif;
 	font-size: 16px;
 }
