--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 	padding: 0 30px 60px 30px;
 	font-family: Times, serif;
 	font-size: 16px;
+	text-align: center;
 }
 
 div#title {
@@ -55,6 +56,9 @@ div#abstract {
 	padding: 20px;
 	border: 1px solid #000000;
 	box-shadow: 0 0 10px;
+	max-width: 60em;
+	display: inline-block;
+	text-align: left;
 }
 
 p {
