Removed server-side background resizing

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
 	background-color: #1C1C1C;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
+        background-size: cover;
+        background-image: url(/images/pictures/hs-2007-16-f-1280_wallpaper.jpg);
 	margin: 0;
 	padding: 0 30px 60px 30px;
 	font-family: Times, serif;
