--- a/style.css
+++ b/style.css
@@ -1,93 +1,97 @@
 body {
-	background-color: #1C1C1C;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-        background-size: cover;
-        background-image: url(/images/pictures/hs-2007-16-f-1280_wallpaper.jpg);
-	margin: 0;
-	padding: 0 30px 60px 30px;
-	font-family: Times, serif;
-	font-size: 16px;
-	text-align: center;
+    background-color: #1C1C1C;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-image: url(/images/pictures/hs-2007-16-f-1280_wallpaper.jpg);
+    margin: 0;
+    padding: 0 30px 60px 30px;
+    font-family: Times, serif;
+    font-size: 18px;
+    text-align: center;
+    line-height: 150%;
 }
 
 div#title {
-	text-align: center;
-	margin: 20px;
-	color: #FFFFFF;
+    text-align: center;
+    margin: 40px;
+    color: #FFFFFF;
 }
 
 div#title a {
-	color: #FFFFFF;
-	text-decoration: none;
+    color: #FFFFFF;
+    text-decoration: none;
 }
 
 h1 {
-	margin: 0;
-	padding: 0;
-	font-size: 32px;
-	font-weight: bold;
-	text-shadow: 0 1px 4px #000000;
+    margin: 0;
+    padding: 0;
+    font-size: 32px;
+    font-weight: bold;
+    text-shadow: 0 1px 4px #000000;
 }
 
 h2 {
-	margin: 0;
-	padding: 0;
-	font-size: 24px;
-	font-weight: bold;
-	text-shadow: 0 1px 1px #000000;
+    margin: 0;
+    padding: 0;
+    font-size: 24px;
+    font-weight: bold;
+    text-shadow: 0 1px 1px #000000;
 }
 
 h3 {
-	margin: 0;
-	padding: 0;
-	font-size: 16px;
-	font-weight: bold;
-	text-shadow: 0 1px 1px #000000;
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+    font-weight: bold;
+    text-shadow: 0 1px 1px #000000;
 }
 
 h4 {
-	margin: 0 0 16px 0;
-	padding: 0;
-	font-size: 18px;
-	font-weight: bold;
+    margin: 16px 0;
+    padding: 0;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+p + h4 {
+    margin-top: 50px;
 }
 
 div#abstract {
-	background-color: #FFFFFF;
-	padding: 20px;
-	border: 1px solid #000000;
-	box-shadow: 0 0 10px;
-	max-width: 60em;
-	display: inline-block;
-	text-align: left;
+    background-color: #FFFFFF;
+    padding: 30px;
+    border: 1px solid #000000;
+    box-shadow: 0 0 10px;
+    max-width: 60em;
+    display: inline-block;
+    text-align: left;
 }
 
 p {
-	margin: 0 0 14px 0;
-	padding: 0;
-	text-align: justify;
+    margin: 0 0 14px 0;
+    padding: 0;
+    text-align: justify;
 }
 
 p:last-of-type {
-	margin: 0;
+    margin: 0;
 }
 
 div#download {
-	float: right;
-	text-align: center;
-	margin-left: 20px;
+    float: right;
+    text-align: center;
+    margin-left: 20px;
 }
 
 div#download p {
-	text-align: center;
-	margin: 0 0 4px 0;
+    text-align: center;
+    margin: 0 0 4px 0;
 }
 
 div#abstract a {
-	color: #1A55AD;
-	text-shadow: 0 0 3px #74ACFF;
-	text-decoration: none;
-	font-weight: bold;
+    color: #1A55AD;
+    text-decoration: none;
+    font-weight: bold;
 }
 
