--- a/style.css
+++ b/style.css
@@ -54,6 +54,13 @@ h4 {
     font-weight: bold;
 }
 
+h5 {
+    margin: 8px 0;
+    padding: 0;
+    font-size: 18px;
+    font-weight: bold;
+}
+
 p + h4 {
     margin-top: 50px;
 }
